<resources>
    <string name="app_name">Contact</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="title_activity_main_activity">MainActivity</string>

    <string name="title_home">Home</string>
    <string name="all_contacts">Contacts</string>
    <string name="email">Email</string>
    <string name="phone_no_optional">Phone No (Optional)</string>
    <string name="name">Enter your name</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="neighbours">Neighbours</string>
    <string name="office">Office</string>
    <string name="business">Business</string>
    <string name="varun_dinesh">P Petchi Muthu</string>
    <string name="_9789263997">9789263997</string>
    <string name="personal_contact">Personal Contact</string>
    <string name="favorites">Favorites</string>
    <string name="groups">Groups</string>
    <string name="fav">Fav</string>
    <string name="todo">loading....</string>
    <string name="phone_no">Phone Number</string>
    <string name="me">Me</string>

</resources>