<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7FBDE"
    tools:context=".ui.fragment.GroupsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_family"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#EBFFF4"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_family"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:paddingStart="20dp"
            android:text="@string/family"
            android:textSize="35sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/image_family"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_baseline_groups_24" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_friends"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#EBFFF4"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_family">

        <TextView
            android:id="@+id/text_friend"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:paddingStart="20dp"
            android:text="@string/friends"
            android:textSize="35sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/image_friend"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_baseline_groups_24" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_neighbours"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:layout_marginTop="116dp"
        app:cardBackgroundColor="#EBFFF4"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_friends">

        <TextView
            android:id="@+id/text_neighbours"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:paddingStart="20dp"
            android:text="@string/neighbours"
            android:textSize="35sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/image_neighbours"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_baseline_groups_24" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_office"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#EBFFF4"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_neighbours">

        <TextView
            android:id="@+id/text_group"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:paddingStart="20dp"
            android:text="@string/office"
            android:textSize="35sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/image_group"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_baseline_groups_24" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_business"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#EBFFF4"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_office">

        <TextView
            android:id="@+id/text_business"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:paddingStart="20dp"
            android:text="@string/business"
            android:textSize="35sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/image_business"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_baseline_groups_24" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>